package newairlineapp.commands;

public interface Command {
    void execute();
}